--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,8 @@
 				"VisualStudioExptTeam.vscodeintellicode",
 				"ritwickdey.LiveServer",
 				"vmware.vscode-boot-dev-pack",
-				"vscjava.vscode-spring-initializr"
+				"vscjava.vscode-spring-initializr",
+				"mkloubert.vscode-http-client"
 			]
 		}
 	}
